# tanuki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
src/board/: board.c  board.h
